Ajustes para el empaquetado del programa